# ml-infra-landscape

./: CUDA_HELL.md  README.md  pyproject.toml
baseten/: config.yaml  pyproject.toml
baseten/model/: model.py
beam/: main.py  pyproject.toml
local/: main.py  pyproject.toml
modal/: main.py  pyproject.toml
replicate/: cog.yaml  predict.py  pyproject.toml
replicate/.cog/tmp/build1478859569/: requirements.txt
